Refactor [removing totallylazy dependency]